Fix columns wrap negative bottom margin

--- a/wp-content/themes/wprig-ucf-bands/assets/css/src/_blocks.css
+++ b/wp-content/themes/wprig-ucf-bands/assets/css/src/_blocks.css
@@ -41,7 +41,6 @@
  */
 
 /* remove default bottom margins */
-.wp-block-columns,
 .wp-block-image,
 .wp-block-image figcaption {
 	margin-bottom: 0;
